--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
     <script type="text/javascript" src="../static/js/rem.js"></script>
     <link rel="stylesheet" href="../static/css/style.css">
-    <title>天津市博安信通智慧社区内网数据比对信息系统</title>
+    <title>基于ARIMA模型的多类型新能源汽车销量预测系统</title>
 </head>
 
 <body style="visibility: hidden;">
@@ -23,65 +23,30 @@
             </div>
             <div class="left-center">
                 <div class="title-box">
-                    <h6>违法犯罪人员分析</h6>
+                    <h6>新能源汽车充电桩地区分布</h6>
                 </div>
                 <div class="chart-box pie-chart" style="">
-                    <div id="pie_fanzui" style="width:100%;"></div>
-                    
+                    <div id="pie_fanzui" style="width:100%;height:90%">
+
+                    </div>
                 </div>
             </div>
-            <div class="left-bottom" class="select">
+            <div class="left-bottom">
                 <div class="title-box">
-                    <h6>人口出入记录</h6>
+                    <h6>新能源汽车购买记录</h6>
                     
                 </div>
-                <div class="chart-box">
-                    <table class="table3">
-                    <thead>
-                        <tr>
-                            <th>姓名</th>
-                            <th>角色</th>
-                            <th>开门方式</th>
-                            <th>时间</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tList">
-<!--<tr><td colspan="4"><p style="width:9.6rem;">暂无数据</p></td></tr>-->
-                 
-                   <tr>
-                       <td>张梦</td>
-                       <td>访客</td>
-                       <td>人脸</td>
-                       <td>2018-11-01 13:51:23</td>
-                   </tr>
-                   <tr>
-                       <td>李阳荣</td>
-                       <td>业主</td>
-                       <td>APP</td>
-                       <td>2018-11-01 13:51:23</td>
-                   </tr>
-                   <tr>
-                        <td>张无双</td>
-                       <td>访客</td>
-                       <td>人脸</td>
-                       <td>2018-11-01 13:51:23</td>
-                   </tr>
-                   <tr>
-                       <td>李阳</td>
-                       <td>业主</td>
-                       <td>APP</td>
-                       <td>2018-11-01 13:51:23</td>
-                   </tr>
-                  
-                    </tbody>
-                </table>
-                
+                <div class="chart-box pie_chart" style="">
+                    <div id="pie_bingtu" style="width:101%;height:90%">
+
+                    </div>
+
                 </div>
             </div>
         </div>
         <div class="box-center">
             <div class="center-top">
-                <h1><img src="../static/images/jinghui.png" style="width:55px;margin-right:20px;"/>智慧社区内网比对平台</h1>
+                <h1><img src="../static/images/tubiao.png" style="width:55px;margin-right:20px;"/>新能源汽车销量预测平台</h1>
             </div>
             <div class="center-center">
                 <div class="weather-box">
@@ -94,7 +59,7 @@
                         <div id="weather">
                             <p class="active">多云</p>
                             <p>16-22℃</p>
-                            <p>天津市和平区</p>
+                            <p>武汉市江夏区</p>
                         </div>
                     </div>
                 </div>
@@ -113,7 +78,7 @@
             </div>
             <div class="center-bottom">
                 <div class="chart-box">
-                    <div id="china_map" style="width:100%;height:95%;"></div>
+                    <div id="china_map" style="width:100%;height:80%;"></div>
                 </div>
                 
             </div>
@@ -122,36 +87,66 @@
         <div class="box-right">
             <div class="right-top">
                 <div class="title-box">
-                    <h6 id="barTitle">违法犯罪人员年龄分布</h6>
+                    <h6 id="barTitle">汽车购买人年龄分布</h6>
                     
                 </div>
-                <p class="unit">单位：岁</p>
+<!--                <p class="unit">单位：岁</p>-->
                 <div class="chart-box">
-                    <div id="pie_age" style="width:100%;height:100%;"></div>
+                    <div id="pie_age" style="width:103%;height:80%;"></div>
                 </div>
                 
             </div>
             <div class="right-center">
             	
                 <div class="title-box">
-                    <h6>违法犯罪人员地区分布</h6>
+                    <h6>汽车销量地区分布</h6>
                 </div>
-                <div class="chart-box pie-chart">
-                    
-                    <div id="qufenbu_data"style="width:90%;height:120px;margin-left:10px;"></div>
-                    
+                <div class="chart-box">
+                    <table class="table3" style="width:103%;height:50%;">
+                    <thead>
+                        <tr>
+                            <th>subtitles</th>
+                            <th>网址</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tList">
+<!--<tr><td colspan="4"><p style="width:9.6rem;">暂无数据</p></td></tr>-->
+
+                   <tr>
+                       <td>张女士</td>
+                       <td>28000000000000000000000000000
+                       00000000000000000000000000000000000
+                       000000000000000000000000000000000000</td>
+                   </tr>
+                   <tr>
+                       <td>李先生</td>
+                       <td>32000000000000000000000000
+                       000000000000000000000000000</td>
+                   </tr>
+                   <tr>
+                        <td>张无双</td>
+                       <td>500000000000000000000000000
+                       000000000000000000000000000000000</td>
+                   </tr>
+                   <tr>
+                       <td>李阳</td>
+                       <td>2000000000000000000000000000000
+                       0000000000000000000000000000000000000</td>
+                   </tr>
+
+                    </tbody>
+                </table>
                 </div>
             </div>
-            
-            
-            <div class="right-bottom">
-                <div class="title-box">
-                	<p id="switchBtn"><span class="active" data-dataType="income">人口出入时间段统计</span></p>
-                    
-                </div>
-                <div id="line_time" style="width:90%;height:160px;margin-left:10px;"></div>
-                
-            </div>
+
+<!--                <div class="right-bottom">-->
+<!--                <div class="title-box">-->
+<!--                	<p id="switchBtn"><span class="active" data-dataType="income">新能源汽车近年销量统计</span></p>-->
+<!--                    -->
+<!--                </div>-->
+<!--                <div id="line_time" style="width:90%;height:160px;margin-left:10px;"></div>-->
+
+<!--            </div>-->
         </div>
     </div>
     
