--- a/templates/index.html
+++ b/templates/index.html
@@ -109,30 +109,42 @@
 
                    <tr>
                        <td>
-                           2023款比亚迪海豚到店实拍：18项升级！实车体验效果超赞<br />
+                           <font size="3" color="white">2023款比亚迪海豚到店实拍：18项升级！实车体验效果超赞</font><br />
                            在A0级轿车市场中，比亚迪海豚已成为连续13个月销量... <br />
-                           <a href="https://www.sohu.com/a/645747236_120790662">>>详情</a>
+                           <div style="text-align: right;font-size: 14px;margin-right: 16px">
+                               <a href="https://www.sohu.com/a/645747236_120790662">>>详情
+                               </a>
+                           </div>
                           </td>
                    </tr>
                    <tr>
                        <td>
-                           扔掉补贴“拐杖” 2月新能源汽车预计基本实现开门红<br />
+                       <font size="3" color="white">扔掉补贴“拐杖” ,2月新能源汽车预计基本实现开门红</font><br />
                            近日，乘联会和多家新能源车企发布了2月份销量数据... <br />
-                           <a href="http://www.ce.cn/cysc/newmain/yc/jsxw/202303/08/t20230308_38430604.shtml">>>详情</a>
-                          </td>
+                           <div style="text-align: right;font-size: 14px;margin-right: 16px">
+                               <a href="http://www.ce.cn/cysc/newmain/yc/jsxw/202303/08/t20230308_38430604.shtml">>>详情
+                               </a>
+                           </div>
+                       </td>
                    </tr>
                    <tr>
                       <td>
-                           今年新能源汽车产业将保持良好发展态势<br />
+                          <font size="3" color="white">今年新能源汽车产业将保持良好发展态势</font><br />
                            2022年，我国新能源汽车迎来了暴发性增长，全年产... <br />
-                           <a href="http://www.cinic.org.cn/hy/yw/1412863.html?from=singlemessage">>>详情</a>
+                           <div style="text-align: right;font-size: 14px;margin-right: 16px">
+                               <a href="http://www.cinic.org.cn/hy/yw/1412863.html?from=singlemessage">>>详情
+                               </a>
+                           </div>
                           </td>
                    </tr>
                    <tr>
                        <td>
-                           特斯拉再度降价，新能源汽车市场竞争日趋激烈<br />
+                           <font size="3" color="white">特斯拉再度降价，新能源汽车市场竞争日趋激烈</font><br />
                            近日，特斯拉宣布下调旗下两款电动汽车model s和... <br />
-                           <a href="https://baijiahao.baidu.com/s?id=1759702430110619240&wfr=spider&for=pc">>>详情</a>
+                           <div style="text-align: right;font-size: 14px;margin-right: 16px">
+                               <a href="https://baijiahao.baidu.com/s?id=1759702430110619240&wfr=spider&for=pc">>>详情
+                               </a>
+                           </div>
                           </td>
                    </tr>
 
