--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,6 @@
     <script type="text/javascript" src="../static/js/rem.js"></script>
     <link rel="stylesheet" href="../static/css/style.css">
     <title>Drive to Future——驰向未来</title>
-    <title>基于ARIMA模型的多类型新能源汽车销量预测系统</title>
 </head>
 
 <body style="visibility: hidden;">
@@ -28,7 +27,7 @@
                     <h6>新能源汽车充电站分布</h6>
                 </div>
                 <div class="chart-box pie-chart" >
-                    <h6>新能源汽车充电桩地区分布</h6>
+{#                    <h6>新能源汽车充电桩地区分布</h6>#}
                 </div>
                 <div class="chart-box pie-chart" style="">
                     <div id="pie_fanzui" style="width:100%;height:90%">
@@ -42,7 +41,7 @@
                     
                 </div>
                 <div class="chart-box pie_chart" >
-                    <h6>新能源汽车购买记录</h6>
+{#                    <h6>新能源汽车购买记录</h6>#}
                     
                 </div>
                 <div class="chart-box pie_chart" style="">
@@ -56,7 +55,6 @@
         <div class="box-center">
             <div class="center-top">
                 <h1><img src="../static/images/tubiao.png" style="width:55px;margin-right:20px;"/>驰向未来：车辆销售预测</h1>
-                <h1><img src="../static/images/tubiao.png" style="width:55px;margin-right:20px;"/>新能源汽车销量预测平台</h1>
             </div>
             <div class="center-center">
                 <div class="weather-box">
@@ -82,7 +80,8 @@
                             <a href="{{ url_for('updateUser') }}">{{ user.username }}</a>
                             <br/>
                         <ul class="login-buttons" style="height: 1.1rem;">
-                            <li><a href="{{ url_for('user.login') }}" class="hvr-sweep-to-left"><input type="submit" value="登录"/></a>
+                            <li>
+{#                                <a href="{{ url_for('user.login') }}" class="hvr-sweep-to-left"><input type="submit" value="登录"/></a>#}
                                 <a href="{{ url_for('user.login') }}" class="hvr-sweep-to-left"><input type="submit" value="退出"/></a>
                             </li>
 {#                               <li><input type="submit" value="退出"/></li>#}
@@ -105,7 +104,7 @@
         <div class="box-right">
             <div class="right-top">
                 <div class="title-box">
-                    <h6 id="barTitle">汽车购买人年龄分布</h6>
+                    <h6 id="barTitle">汽车销售年统计量</h6>
                 </div>
 <!--                <p class="unit">单位：岁</p>-->
                 <div class="chart-box">
@@ -120,23 +119,16 @@
                 </div>
                 <div class="chart-box">
                     <table class="table3" style="width:103%;height:50%;">
-                    <h6>汽车销量地区分布</h6>
+{#                    <h6>汽车销量地区分布</h6>#}
                         </table>
                 </div>
                 <div class="chart-box">
                     <table class="table3" style="width:103%;height:50%;">
-                    <thead>
-                        <tr>
-                            <th>subtitles</th>
-                            <th>网址</th>
-                        </tr>
-                    </thead>
                     <tbody id="tList">
 <!--<tr><td colspan="4"><p style="width:9.6rem;">暂无数据</p></td></tr>-->
-
                    <tr>
                        <td>
-                           <font size="3" color="white">2023款比亚迪海豚到店实拍：18项升级！实车体验效果超赞</font><br />
+                           <font size="3" color="white">2023比亚迪海豚到店实拍：18项升级！实车体验效果超赞</font><br />
                            在A0级轿车市场中，比亚迪海豚已成为连续13个月销量... <br />
                            <div style="text-align: right;font-size: 14px;margin-right: 16px">
                                <a href="https://www.sohu.com/a/645747236_120790662">>>详情
